--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://prottoy2938.github.io/sign-in-page",
   "name": "context_api_practice_authentication_page",
   "version": "0.1.0",
   "private": true,
@@ -14,6 +15,8 @@
     "serialize-javascript": "^2.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
